// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with a singular expense correctly 1`] = `
<div>
  <h3>
    Viewing  
    1
     expense 
    totalling 
    $1,095.00
  </h3>
</div>
`;

exports[`Should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  <h3>
    Viewing  
    3
     expenses 
    totalling 
    $1,141.95
  </h3>
</div>
`;
